--- a/client/views/teams.html
+++ b/client/views/teams.html
@@ -1,8 +1,17 @@
 <template name="teams">
 	<h3>Teams</h3>
+	{{#if creating}}
+	<form class="form-create">
+		<input name="name" type="text">
+		<button type="submit">Submit</button>
+		<a class="cancel" href="#">Cancel</a>
+	</form>
+	{{else}}
+	<a class="create" href="#">Create</a>
+	{{/if}}
 	<ul>
 		{{#each teams}}
-			<li>{{name}}</li>
+			{{> team}}
 		{{/each}}
 	</ul>
 </template>
