Named route to games

--- a/client/views/menu.html
+++ b/client/views/menu.html
@@ -1,7 +1,7 @@
 <template name="menu">
 	<ul>
 		<li>
-      {{#if isActive}}
+      {{#if isActive "games"}}
 				Games
       {{else}}
 				<a href="/">Games</a>
