Add access denied page when not logged in

--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -1,6 +1,8 @@
 <template name="layout">
 	<h1>Foosboom</h1>
-  {{> menu}}
+  {{#if currentUser}}
+    {{> menu}}
+  {{/if}}
 
   {{> loginButtons}}
   {{> yield}}
