add transition for changing routes

--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -5,5 +5,9 @@
   {{/if}}
 
   {{> loginButtons}}
-  {{> yield}}
+	<div style="width: 400px">
+    {{#transition}}
+      {{> yield}}
+    {{/transition}}
+	</div>
 </template>
