--- a/client/views/teams.html
+++ b/client/views/teams.html
@@ -1,17 +1,19 @@
 <template name="teams">
-	<h3>Teams</h3>
-	{{#if creating}}
-	<form class="form-create">
-		<input name="name" type="text">
-		<button type="submit">Submit</button>
-		<a class="cancel" href="#">Cancel</a>
-	</form>
-	{{else}}
-	<a class="create" href="#">Create</a>
-	{{/if}}
-	<ul>
-		{{#each teams}}
-			{{> team}}
-		{{/each}}
-	</ul>
+	<div>
+		<h3>Teams</h3>
+    {{#if creating}}
+			<form class="form-create">
+				<input name="name" type="text">
+				<button type="submit">Submit</button>
+				<a class="cancel" href="#">Cancel</a>
+			</form>
+    {{else}}
+			<a class="create" href="#">Create</a>
+    {{/if}}
+		<ul>
+      {{#each teams}}
+        {{> team}}
+      {{/each}}
+		</ul>
+	</div>
 </template>
