Basic tests up and running

--- a/client/views/game.html
+++ b/client/views/game.html
@@ -1,5 +1,5 @@
 <template name="game">
-	<li class="fade">
+	<li class="fade game">
     {{#if completed}}
       {{teams.[0].name}} ({{teams.[0].score}})
 			vs
